--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
 	<!-- Javascripts 
 	    ================================================= -->
 	<script src="/js/jquery.min.js"></script>
-	<script src="/js/custom.js"></script>
+	<script src="/js/google.js"></script>
 
     <!-- Analytics
     ================================================== -->
