--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,13 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8"/>
-		<title>{% if page.title %} {{ page.title }} {% endif %} -  Mark Dunphy's Blog</title>
+		<title>{% if page.title %} {{ page.title }} {% endif %} - Vanilla Bean Creme</title>
 		<!-- For responsive site
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		-->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<link rel="author" href="/humans.txt">
-		<meta name="description" content="Mark Dunphy's blog where he talks about software, cookies, and the great outdoors. But mostly software.">
+		<meta name="description" content="Description Goes Here">
 		<link rel="stylesheet" href="/css/style.css">
 		<!--[if IE 7]>
 			<html class="ie7"> 
@@ -36,7 +36,7 @@
 
 	<footer>
 		<div class="container">
-			<a href="http://richbray.me/frap/">Frappuccino</a> | I'm Mark Dunphy and this is my website.
+			<a href="http://richbray.me/frap/">Frappuccino</a> | Copyright or profile stuff goes here
 		</div>
 	</footer>
 
@@ -46,19 +46,12 @@
 	<!-- Javascripts 
 	    ================================================= -->
 	<script src="/js/jquery.min.js"></script>
+	<script src="/js/custom.js"></script>
 
     <!-- Analytics
     ================================================== -->
     <script>
-		var _gaq = _gaq || [];
-		_gaq.push(['_setAccount', 'UA-35911206-1']);
-		_gaq.push(['_trackPageview']);
-
-		(function() {
-		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-		})();
+		// analytics code
     </script>	
 	</body>
 </html>
